--- a/pages/template.html
+++ b/pages/template.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Brand</title>
-    <link rel="stylesheet" href="/assets/template/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/template/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
-    <link rel="stylesheet" href="/assets/template/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="../assets/template/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
 </head>
 
@@ -22,7 +22,7 @@
 <main class="page lanidng-page">
     <section class="portfolio-block block-intro">
         <div class="container">
-            <div class="avatar" style="background-image:url(&quot;/assets/template/img/avatars/avatar.jpg&quot;);"></div>
+            <div class="avatar" style="background-image:url(&quot;../assets/template/img/avatars/avatar.jpg&quot;);"></div>
             <div class="about-me">
                 <p>Hello! I am <strong>John Smith</strong>. I work as interface and front end developer. I have passion for pixel perfect, minimal and easy to use interfaces.</p>
             </div>
@@ -75,7 +75,7 @@
             <div class="col-md-12 col-lg-5">
                 <div class="portfolio-laptop-mockup">
                     <div class="screen">
-                        <div class="screen-content" style="background-image:url(&quot;/assets/template/img/tech/image6.png&quot;);"></div>
+                        <div class="screen-content" style="background-image:url(&quot;../assets/template/img/tech/image6.png&quot;);"></div>
                     </div>
                     <div class="keyboard"></div>
                 </div>
@@ -89,9 +89,9 @@
         <div class="social-icons"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-instagram-outline"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a></div>
     </div>
 </footer>
-<script src="/assets/template/bootstrap/js/bootstrap.min.js"></script>
+<script src="../assets/template/bootstrap/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-<script src="/assets/template/js/theme.js"></script>
+<script src="../assets/template/js/theme.js"></script>
 </body>
 
 </html>
